[gd_scene load_steps=9 format=3 uid="uid://d4i873ru2skmw"]

[ext_resource type="Theme" uid="uid://ctqg0on3ebbdy" path="res://fanta_theme.tres" id="1_a2p4s"]
[ext_resource type="Script" path="res://src/screens/main/main.gd" id="2_t4dvb"]
[ext_resource type="PackedScene" uid="uid://cmxee5ywoanvl" path="res://src/screens/main/player_list/player_list.tscn" id="3_w4uhl"]
[ext_resource type="PackedScene" uid="uid://ddxmw2r05sce7" path="res://src/screens/main/history/history.tscn" id="4_46i6t"]
[ext_resource type="PackedScene" uid="uid://by5xqkpdiio2o" path="res://src/screens/main/auction_control/auction_control.tscn" id="5_iadvp"]
[ext_resource type="PackedScene" uid="uid://cy6ujws16sijb" path="res://src/screens/main/team_overview/team_overview.tscn" id="6_8armv"]
[ext_resource type="PackedScene" uid="uid://dqr46eapnnw57" path="res://src/screens/main/assign_player/assign_player.tscn" id="7_0ly00"]
[ext_resource type="PackedScene" uid="uid://cbv4v5l8m8s18" path="res://src/ui_components/timer/timer.tscn" id="8_drged"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_a2p4s")
script = ExtResource("2_t4dvb")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Dashboard" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Left" type="VBoxContainer" parent="MarginContainer/Dashboard"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2

[node name="PlayerList" parent="MarginContainer/Dashboard/Left" instance=ExtResource("3_w4uhl")]
custom_minimum_size = Vector2(300, 800)
layout_mode = 2

[node name="History" parent="MarginContainer/Dashboard/Left" instance=ExtResource("4_46i6t")]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_vertical = 3

[node name="VSeparator" type="VSeparator" parent="MarginContainer/Dashboard"]
layout_mode = 2

[node name="Right" type="VBoxContainer" parent="MarginContainer/Dashboard"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Header" type="HBoxContainer" parent="MarginContainer/Dashboard/Right"]
layout_mode = 2
theme_override_constants/separation = 10
metadata/_edit_use_anchors_ = true

[node name="VSeparator3" type="VSeparator" parent="MarginContainer/Dashboard/Right/Header"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="AuctionControl" parent="MarginContainer/Dashboard/Right/Header" instance=ExtResource("5_iadvp")]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="MarginContainer/Dashboard/Right/Header"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Connect" type="Button" parent="MarginContainer/Dashboard/Right/Header"]
layout_mode = 2
size_flags_vertical = 0
text = "CONNECT"

[node name="ServerStatus" type="ColorRect" parent="MarginContainer/Dashboard/Right/Header"]
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
size_flags_vertical = 0

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/Dashboard/Right/Header"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="Menu" type="Button" parent="MarginContainer/Dashboard/Right/Header"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "MENU"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/Dashboard/Right"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/Dashboard/Right"]
layout_mode = 2

[node name="TeamOverview" parent="MarginContainer/Dashboard/Right" instance=ExtResource("6_8armv")]
layout_mode = 2

[node name="AssignPlayer" parent="." instance=ExtResource("7_0ly00")]
visible = false

[node name="Timer" parent="." instance=ExtResource("8_drged")]
visible = false
layout_mode = 1
metadata/_edit_use_anchors_ = true

[node name="ConnectionLost" type="AcceptDialog" parent="."]
title = "CONNECTION LOST"
size = Vector2i(600, 200)

[node name="Label" type="Label" parent="ConnectionLost"]
offset_left = 8.0
offset_top = 8.0
offset_right = 592.0
offset_bottom = 116.0
text = "PLEASE RECONNECT"

[connection signal="active_player_change" from="MarginContainer/Dashboard/Left/PlayerList" to="." method="_on_player_list_active_player_change"]
[connection signal="assign" from="MarginContainer/Dashboard/Right/Header/AuctionControl" to="." method="_on_auction_control_assign"]
[connection signal="auction" from="MarginContainer/Dashboard/Right/Header/AuctionControl" to="." method="_on_auction_control_auction"]
[connection signal="next" from="MarginContainer/Dashboard/Right/Header/AuctionControl" to="." method="_on_auction_control_next"]
[connection signal="previous" from="MarginContainer/Dashboard/Right/Header/AuctionControl" to="." method="_on_auction_control_previous"]
[connection signal="pressed" from="MarginContainer/Dashboard/Right/Header/Connect" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="MarginContainer/Dashboard/Right/Header/Menu" to="." method="_on_menu_pressed"]
[connection signal="player_removed" from="MarginContainer/Dashboard/Right/TeamOverview" to="." method="_on_team_overview_player_removed"]
[connection signal="assigned" from="AssignPlayer" to="." method="_on_assign_player_assigned"]
[connection signal="paused" from="Timer" to="." method="_on_timer_paused"]
[connection signal="reseted" from="Timer" to="." method="_on_timer_reseted"]
[connection signal="time_change" from="Timer" to="." method="_on_timer_time_change"]
[connection signal="toggle" from="Timer" to="." method="_on_timer_toggle"]
